--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,18 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "solid-devtools": "^0.29.2",
+    "solid-devtools": "^0.29.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-solid": "^2.8.2"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vite-plugin-solid": "^2.10.1"
   },
   "dependencies": {
-    "solid-js": "^1.8.11"
+    "solid-js": "^1.8.15",
+    "ts-pattern": "^5.0.8"
   }
 }
