--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template-solid",
+  "name": "client",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -8,7 +8,6 @@
     "build": "vite build",
     "serve": "vite preview"
   },
-  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
