--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "vite-plugin-solid": "^2.10.1"
   },
   "dependencies": {
+    "@solidjs/router": "^0.13.0",
     "solid-js": "^1.8.15",
     "ts-pattern": "^5.0.8"
   }
