--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,3 +17,4 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 dotenvy = "0.15.7"
 rand = "0.8.5"
+anyhow = "1.0.81"
