--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,3 +18,4 @@ serde_json = "1.0.113"
 dotenvy = "0.15.7"
 rand = "0.8.5"
 anyhow = "1.0.81"
+tower-http = { version = "0.5.2", features = ["cors"] }
