--- a/client/package.json
+++ b/client/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "client",
-  "version": "0.0.0",
-  "description": "",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
-    "solid-devtools": "^0.29.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
-    "vite-plugin-solid": "^2.10.1"
-  },
-  "dependencies": {
-    "@solidjs/router": "^0.13.0",
-    "solid-js": "^1.8.15",
-    "ts-pattern": "^5.0.8"
-  }
+	"name": "client",
+	"version": "0.0.0",
+	"description": "",
+	"scripts": {
+		"start": "vite",
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.18",
+		"postcss": "^8.4.35",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.12",
+		"prettier-plugin-organize-imports": "^3.2.4",
+		"solid-devtools": "^0.29.3",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.4.2",
+		"vite": "^5.1.6",
+		"ts-pattern": "^5.0.8",
+		"vite-plugin-solid": "^2.10.1"
+	},
+	"dependencies": {
+		"@solidjs/router": "^0.13.0",
+		"solid-js": "^1.8.15"
+	}
 }
