--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "rust-analyzer.linkedProjects": [
         "./server/Cargo.toml",
         "./prompt_gen/Cargo.toml"
-    ]
+    ],
+    "prettier.configPath": "./frontend/.prettierrc"
 }
