--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.7.4", features = ["ws"] }
-axum-extra = { version = "0.9.2", features = ["typed-header"] }
+axum = { version = "0.7.4", features = ["macros", "ws"] }
+axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
 futures = "0.3.30"
 headers = "0.4.0"
 tokio = { version = "1.36.0", features = ["full", "tracing"] }
@@ -18,3 +18,10 @@ dotenvy = "0.15.7"
 rand = "0.8.5"
 anyhow = "1.0.81"
 tower-http = { version = "0.5.2", features = ["cors"] }
+sqlx = { version = "0.7.4", features = [
+    "runtime-tokio",
+    "tls-native-tls",
+    "sqlite",
+] }
+reqwest = { version = "0.12", features = ["json"] }
+cookie = "0.18.1"
