--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,10 @@
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start"
+    "build": "vinxi build"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.0.19",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
     "autoprefixer": "^10.4.19",
@@ -17,5 +17,10 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.5"
   }
 }
