--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.19",
+    "@fontsource-variable/jetbrains-mono": "^5.0.21",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
     "autoprefixer": "^10.4.19",
