--- a/client/package.json
+++ b/client/package.json
@@ -1,27 +1,30 @@
 {
   "name": "client",
-  "type": "module",
+  "version": "0.0.0",
+  "description": "",
   "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build"
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "dependencies": {
+  "license": "MIT",
+  "devDependencies": {
     "@fontsource-variable/inter": "^5.0.19",
     "@fontsource-variable/jetbrains-mono": "^5.0.21",
-    "@solidjs/router": "^0.13.6",
-    "@solidjs/start": "^1.0.2",
+    "@types/node": "^20.14.11",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "solid-js": "^1.8.17",
-    "tailwindcss": "^3.4.3",
-    "vinxi": "^0.3.12"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "devDependencies": {
-    "prettier": "^3.3.2",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-tailwindcss": "^0.6.5"
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "solid-devtools": "^0.30.1",
+    "tailwindcss": "^3.4.6",
+    "vite": "^5.3.4",
+    "vite-plugin-solid": "^2.10.2"
+  },
+  "dependencies": {
+    "@solidjs/router": "^0.14.1",
+    "solid-js": "^1.8.18"
   }
 }
