--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,15 +2,13 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "allowJs": true,
+    "types": ["vite/client"],
     "noEmit": true,
-    "strict": true,
-    "types": ["vinxi/types/client"],
     "isolatedModules": true,
     "skipLibCheck": true,
     "paths": {
