--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,6 +11,7 @@
     "noEmit": true,
     "isolatedModules": true,
     "skipLibCheck": true,
+    "strict": true,
     "paths": {
       "~/*": ["./src/*"]
     }
