tailwind colors, input component, join messages

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,4 +1,5 @@
 {
   "printWidth": 100,
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["tv"]
 }
