--- a/client/package.json
+++ b/client/package.json
@@ -9,22 +9,22 @@
     "serve": "vite preview"
   },
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
+    "@solidjs/router": "^0.14.1",
+    "solid-js": "^1.8.18",
     "@fontsource-variable/inter": "^5.0.19",
     "@fontsource-variable/jetbrains-mono": "^5.0.21",
-    "@types/node": "^20.14.11",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "solid-devtools": "^0.30.1",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.6",
     "vite": "^5.3.4",
     "vite-plugin-solid": "^2.10.2"
   },
-  "dependencies": {
-    "@solidjs/router": "^0.14.1",
-    "solid-js": "^1.8.18"
+  "devDependencies": {
+    "solid-devtools": "^0.30.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.5"
   }
 }
