--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,6 +12,8 @@
     "isolatedModules": true,
     "skipLibCheck": true,
     "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
     "paths": {
       "~/*": ["./src/*"]
     }
