--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,7 @@ axum = { version = "0.7.5", features = ["macros", "ws"] }
 axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
 futures = "0.3.30"
 headers = "0.4.0"
-tokio = { version = "1.36.0", features = ["full", "tracing"] }
+tokio = { version = "1.36.0", features = ["full"] }
 uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
