--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,3 +25,4 @@ sqlx = { version = "0.7.4", features = [
 reqwest = { version = "0.12", features = ["json"] }
 cookie = "0.18.1"
 thiserror = "1.0.61"
+dashmap = "6.0.1"
