--- a/client/package.json
+++ b/client/package.json
@@ -9,23 +9,23 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@fontsource-variable/inter": "^5.0.19",
-    "@fontsource-variable/jetbrains-mono": "^5.0.21",
-    "@solidjs/router": "^0.14.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "solid-js": "^1.8.18",
+    "@fontsource-variable/inter": "^5.0.20",
+    "@fontsource-variable/jetbrains-mono": "^5.0.22",
+    "@solidjs/router": "^0.14.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "solid-js": "1.8.22",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^3.4.10",
     "tinycolor2": "^1.6.0",
-    "vite": "^5.3.4",
+    "vite": "^5.4.2",
     "vite-plugin-solid": "^2.10.2"
   },
   "devDependencies": {
     "@types/tinycolor2": "^1.4.6",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "solid-devtools": "^0.30.1"
   }
 }
