--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
 dotenvy = "0.15.7"
 rand = "0.8.5"
-tower-http = { version = "0.5.2", features = ["cors"] }
+tower-http = { version = "0.5.2", features = ["fs", "cors"] }
 sqlx = { version = "0.8.1", features = [
     "runtime-tokio",
     "tls-native-tls",
