--- a/Caddyfile
+++ b/Caddyfile
@@ -1,11 +1,11 @@
-localhost
+wordplay.lol {
+    handle /api/* {
+        reverse_proxy /api/* server:3021
+    }
 
-handle /api/* {
-    reverse_proxy /api/* server:3021
-}
-
-handle {
-    root * /srv
-    try_files {path} /index.html
-    file_server
+    handle {
+        root * /srv
+        try_files {path} /index.html
+        file_server
+    }
 }
