--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,7 @@
-FROM node:21 as frontend-builder
+FROM node:21.5.0 AS frontend-builder
 
 WORKDIR /frontend
-ENV NODE_ENV production
-COPY package.json package-lock.json ./
-RUN npm ci && npm cache clean --force
+ENV NODE_ENV=production
 COPY . .
+RUN npm ci
 RUN npm run build -- --outDir /frontend-build --emptyOutDir
